<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <View
        android:id="@+id/arrowBack"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/arrow"
        style="@style/picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_description"
        app:layout_constraintBottom_toTopOf="@+id/DescriptionTextView"
        app:layout_constraintStart_toStartOf="@+id/DescriptionTextView" />

    <EditText
        android:id="@+id/NameTextView"
        style="@style/formDropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"

        android:autofillHints=""
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_manufacturer"
        app:layout_constraintBottom_toTopOf="@+id/ManufacturerSpinner"
        app:layout_constraintStart_toStartOf="@+id/ManufacturerSpinner" />

    <com.example.myapplication.EditSpinner
        android:id="@+id/ManufacturerSpinner"
        style="@style/formDropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NameTextView"
        tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_license"
        app:layout_constraintBottom_toTopOf="@+id/LicencySpinner"
        app:layout_constraintStart_toStartOf="@+id/LicencySpinner" />

    <Spinner

        android:id="@+id/LicencySpinner"
        style="@style/formDropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:paddingStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ManufacturerSpinner"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/p_name"
        app:layout_constraintBottom_toTopOf="@+id/NameTextView"
        app:layout_constraintStart_toStartOf="@+id/NameTextView" />

    <EditText

        android:id="@+id/DescriptionTextView"
        style="@style/formDropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LicencySpinner"
        tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize"
        android:inputType="textCapSentences|textMultiLine"
        android:autofillHints=""

        android:layout_weight="1"
        android:maxLength="2000"
        />

    <Button
        android:id="@+id/DeleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/material_dynamic_tertiary30"
        android:onClick="save"
        android:text="@string/save"
        android:textColor="@color/material_dynamic_neutral100"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionTextView"
        tools:ignore="VisualLintButtonSize" />

    <View
        android:layout_width="33dp"
        android:layout_height="20dp"
        android:layout_marginEnd="10dp"
        style="@style/picker"
        app:layout_constraintBottom_toBottomOf="@+id/LicencySpinner"
        app:layout_constraintEnd_toEndOf="@+id/LicencySpinner"
        app:layout_constraintTop_toTopOf="@+id/LicencySpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>